--- a/styling.css
+++ b/styling.css
@@ -4,6 +4,10 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
     margin: 0;
     background-color: rgb(250, 150, 83);
 }
