--- a/styling.css
+++ b/styling.css
@@ -48,7 +48,7 @@ p{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 15px; /* Διάστημα μεταξύ των στοιχείων */
+    gap: 15px; 
 }
 
 #startGame,#restartGame {
